<resources>
    <string name="app_name">Trehgorny in pocket</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="roboto_thin">sans-serif-thin</string>

    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="action_news">News</string>
    <string name="action_announcement">Announcement</string>
    <string name="action_organizations">Organizations</string>
    <string name="action_weather">Weather</string>
    <string name="search">Search</string>
    <string name="degree">°</string>
    <string name="city_name">Tryokhgorny</string>

    <string name="appwidget_text">Weather Tryokhgorny</string>
    <string name="ok">Ok</string>
    <string name="calendar_image">Calendar image</string>
    <string name="news_picture">News picture</string>
    <string name="organization_label">Organization label</string>
    <string name="header_picture_of_navigation_bar">Header picture of navigation bar</string>
    <string name="account_image">Account image</string>
    <string name="item_weather_image">Item weather image</string>
    <string name="item_announcement_picture">Item announcement picture</string>
    <string name="clock_icon">Clock icon</string>
    <string name="icon_current_contact">Icon current contact</string>
    <string name="item_news_picture">Item news picture</string>
    <string name="icon_current_weather">Icon current weather</string>
    <string name="item_picture">Item picture</string>
</resources>
