<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_newspaper"
            android:title="@string/action_news" />
        <item
            android:id="@+id/nav_announcement"
            android:icon="@drawable/ic_rss_feed"
            android:title="@string/action_announcement" />
        <item
            android:id="@+id/nav_organizations"
            android:icon="@drawable/ic_organization"
            android:title="@string/action_organizations" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_wb_weather"
            android:title="@string/action_weather" />
    </group>
</menu>