<?xml version="1.0" encoding="utf-8"?>
<com.nenton.trehgornyinpocket.ui.screens.curannoncement.CurAnnouncementView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/spacing_normal_16">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/wrap_announcement"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_small_8">


            <ImageView
                android:id="@+id/announcement_image_calendar_iv"
                android:layout_width="@dimen/spacing_large_56"
                android:layout_height="@dimen/spacing_large_56"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="@dimen/spacing_normal_16"
                android:elevation="4dp"
                android:src="@drawable/ic_calendar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/calendar_image"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/announcement_day_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:elevation="4dp"
                android:paddingTop="8dp"
                android:textColor="@color/colorPrimary"
                android:textSize="32dp"
                app:layout_constraintBottom_toTopOf="@+id/announcement_image_calendar_iv"
                app:layout_constraintEnd_toStartOf="@+id/announcement_image_calendar_iv"
                app:layout_constraintStart_toEndOf="@+id/announcement_image_calendar_iv"
                app:layout_constraintTop_toBottomOf="@+id/announcement_image_calendar_iv"
                tools:targetApi="lollipop"
                tools:text="18" />


            <TextView
                android:id="@+id/announcement_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_normal_16"
                android:layout_marginLeft="@dimen/spacing_small_8"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_marginStart="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:fontFamily="@string/roboto_regular"
                android:textColor="@color/greyBlack"
                android:textSize="@dimen/font_medium_16"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/announcement_image_calendar_iv"
                app:layout_constraintTop_toTopOf="@+id/announcement_image_calendar_iv"
                tools:text="Проверка" />

            <TextView
                android:id="@+id/announcement_month_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@string/roboto_medium"
                android:textAlignment="center"
                android:textColor="@color/greyBlack"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/announcement_image_calendar_iv"
                app:layout_constraintStart_toStartOf="@+id/announcement_image_calendar_iv"
                app:layout_constraintTop_toBottomOf="@+id/announcement_image_calendar_iv"
                tools:text="Май" />

            <TextView
                android:id="@+id/announcement_full_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_normal_16"
                android:layout_marginLeft="@dimen/spacing_normal_16"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_marginStart="@dimen/spacing_normal_16"
                android:layout_marginTop="8dp"
                android:fontFamily="@string/roboto_regular"
                android:textColor="@color/greyBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/announcement_month_tv"
                tools:text="Какая-то новость" />

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/cur_announcement_exo_player"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:fastforward_increment="1000"
                app:layout_constraintTop_toBottomOf="@+id/announcement_photos"
                app:rewind_increment="1000" />

            <android.support.v4.view.ViewPager
                android:id="@+id/announcement_photos"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/spacing_small_8"
                app:layout_constraintTop_toBottomOf="@+id/announcement_full_tv"
                tools:background="@color/greyWhite" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</com.nenton.trehgornyinpocket.ui.screens.curannoncement.CurAnnouncementView>